# adaptsim

./: README.md  c_parameter.py  demo.py  distribution.py  n_fraction.py  pre_sim.ipynb  pyproject.toml  requirements.txt  sf_plots.ipynb
data/: sf_clean.csv
src/adaptsim/: __init__.py  afs.py  aft.py  ast.py  constants.py  visualiser.py  visualiser_data.py
work/: patient.json  simulation.json
