[build-system]
requires = [
    "setuptools >= 59",
    "setuptools_scm",
    "wheel",
]

[project]
name = "adaptsim"
description = "Package for simulating dose fractionation therapy in MR guided Adaptive Radiotherapy"
authors = [
    { name = "Janic Tom Weber", email = "janic.weber@uzh.ch"},

]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fractionation", "adaptive radiotherapy", "reinforcement-learning", "simulation"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "adaptfx==0.1.1",
    "numpy==1.24.1",
    "scipy==1.10.0",
    "matplotlib==3.6.3",
    "h5py==3.7.0",
    "ipykernel==6.19.4",
    "ipython==8.7.0",
    "pyqt6==6.4.0",
    "pandas==1.5.2",
    "seaborn==0.12.2"
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/openAFT/adaptsim"


[tool.setuptools_scm]
write_to = "src/adaptsim/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "adaptsim._version.version"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
ast = "adaptsim.ast:main"
